// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches FormControl small 1`] = `
.c0 {
  display: block;
  width: 100%;
  line-height: 1.5;
  color: #343a40;
  background-clip: padding-box;
  -webkit-transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  box-sizing: border-box;
  background-color: #fff;
  border: 1px solid #abaeb1;
  padding-right: 0;
  padding-left: 0;
  padding: 0.25rem 0.5rem;
  font-size: 0.875rem;
  border-radius: 0.2rem;
}

.c0::-ms-expand {
  background-color: transparent;
  border: 0;
}

.c0:focus {
  color: #343a40;
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,0,0,0.15);
}

.c0::-webkit-input-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0::placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0:focus {
  background-color: #fff;
}

.c0:focus {
  border-color: #abaeb1;
}

.c0:focus {
  box-shadow: 0;
}

<input
  className="c0"
/>
`;

exports[`Styles matches FormControl small select 1`] = `
.c0 {
  display: block;
  width: 100%;
  line-height: 1.5;
  color: #343a40;
  background-clip: padding-box;
  -webkit-transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  box-sizing: border-box;
  background-color: #fff;
  border: 1px solid #abaeb1;
  padding-right: 0;
  padding-left: 0;
  padding: 0.25rem 0.5rem;
  font-size: 0.875rem;
  border-radius: 0.2rem;
  height: calc(1.8125rem + 2px);
}

.c0::-ms-expand {
  background-color: transparent;
  border: 0;
}

.c0:focus {
  color: #343a40;
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(0,0,0,0.15);
}

.c0::-webkit-input-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0::placeholder {
  color: #6c757d;
  opacity: 1;
}

.c0:focus {
  background-color: #fff;
}

.c0:focus {
  border-color: #abaeb1;
}

.c0:focus {
  box-shadow: 0;
}

.c0:focus::-ms-value {
  color: #343a40;
  background-color: #fff;
}

<select
  className="c0"
/>
`;
